// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBlock alt 1`] = `
<MediaBlock
  block={Object {}}
  blockProps={
    Object {
      "editorState": Object {},
      "entity": Object {
        "getData": [Function],
      },
      "entityType": Object {},
      "onChange": [Function],
    }
  }
  label="Test"
  src="example.png"
>
  <label
    className="ImageBlock__field"
  >
    <p>
      Alt text
    </p>
    <input
      onChange={[Function]}
      type="text"
      value="Test"
    />
  </label>
  <button
    className="Tooltip__button"
    type="button"
  >
    Edit
  </button>
  <button
    className="Tooltip__button"
    type="button"
  >
    Remove
  </button>
</MediaBlock>
`;

exports[`ImageBlock renders 1`] = `
<MediaBlock
  block={Object {}}
  blockProps={
    Object {
      "editorState": Object {},
      "entity": Object {
        "getData": [Function],
      },
      "entityType": Object {},
      "onChange": [Function],
    }
  }
  label=""
  src="example.png"
>
  <label
    className="ImageBlock__field"
  >
    <p>
      Alt text
    </p>
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <button
    className="Tooltip__button"
    type="button"
  >
    Edit
  </button>
  <button
    className="Tooltip__button"
    type="button"
  >
    Remove
  </button>
</MediaBlock>
`;
